Code Cleanup Inspection Reformat